--- a/Views/Shared/_Nav.cshtml
+++ b/Views/Shared/_Nav.cshtml
@@ -77,7 +77,7 @@
                             </a>
                             <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="@Url.Action("Logout", "Account")">Logout</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("#", "Account")"></a></li>
+                            @*<li><a class="dropdown-item" href="@Url.Action("#", "Account")"></a></li>*@
 
                             </ul>
 
