Question added by user work

--- a/Views/Quiz/Index.cshtml
+++ b/Views/Quiz/Index.cshtml
@@ -23,7 +23,7 @@
                         <button type="button" class="btn-close" data-target="#searchdiv" data-toggle="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body" id="searchmodalbody">
-                        <table>
+                        <table class="table-bordered">
                             <tr>
                                 
                                 <td id="SearchDescription"></td>
