--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,11 +27,11 @@
     <script src="~/lib/jquery/jquery.min.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
     <partial name="_Nav.cshtml" />
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
