--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     <script src="~/lib/jquery/jquery.min.js"></script>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="d-inline-block" style="width: 100%">
     <partial name="_Nav.cshtml" />
     </div>
 
