--- a/Views/Shared/_Nav.cshtml
+++ b/Views/Shared/_Nav.cshtml
@@ -23,7 +23,7 @@
 
 <header>
     
-        <nav class="navbar navbar-expand-md mynavbar">
+        <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl mynavbar">
             
 
             <img class="navbar-brand img-fluid d-none d-sm-block" href="@Url.Action("Index", "Quiz")" src="~/Photos/Icon/Silver Icon.jpg" margin-top:0; margin-bottom:0" />
