--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -48,7 +48,7 @@ a.dropdown.mynavitem.dropdown-toggle.nav-link::before {
 
 .noticetable {
     border: thick 2px;
-    margin: 4px, 7px, 2px, 4px
+    padding: 4px 7px 2px 4px;
 }
 
 .btn{
