--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     @*scriptshere*@
     <script src="~/lib/jquery/jquery.min.js"></script>
 </head>
-<body>
+<body class="overflow-scroll">
     <div class="d-inline-block" style="width: 100%">
     <partial name="_Nav.cshtml" />
     </div>
