--- a/Views/Quiz/Index.cshtml
+++ b/Views/Quiz/Index.cshtml
@@ -25,10 +25,11 @@
                         <button type="button" class="btn-close" data-target="#searchdiv" data-toggle="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body" id="searchmodalbody">
-                        <table class="table-bordered">
+                        <table class=" table table-bordered border-black">
                             <tr>
                                 
                                 <td id="SearchDescription"></td>
+                                
                             </tr>
                         </table>
                     </div>
