--- a/Views/Quiz/PlayQuiz.cshtml
+++ b/Views/Quiz/PlayQuiz.cshtml
@@ -33,7 +33,7 @@
              <div class="row">
               <div class="col-11">
                                 <div class="itemQNO">
-                @*@JsonSerializer.Serialize(@item.Questions)*@
+                @Html.Raw(item.Questions)
                                 </div>
               </div>
              </div>
