--- a/Views/Completion/ViewResult.cshtml
+++ b/Views/Completion/ViewResult.cshtml
@@ -89,7 +89,7 @@
                         </td>
 
                         <td>
-                            @Html.DisplayFor(model => item.Question)
+                           @Html.Raw(item.Question)
                         </td>
 
                         <td>
